# scalar-round1-openenv

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  environment.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: app.py
